[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = {version= "0.22", features = ["serde"]}
egui-wgpu = "0.22"
egui-winit = { version = "0.22", default-features = false, features = ["clipboard", "wayland"] }
winit = "0.28"
winit_input_helper = "0.14"
pixels = "0.13.0"
bincode= "1.3.3"
serde = {version = "1.0", features = ["derive"]}
fastrand = "2.1.0"
rfd = "0.14.1"
minreq= {version = "2.11", features = ["https"]}
